<resources>
    <string name="app_name">Flanelinha</string>

    <!-- LABELS -->

    <string name="label_button_login">Login</string>
    <string name="label_button_register">Register</string>
    <string name="label_MakeCall">Call</string>
    <string name="label_logout">Logout</string>
    <string name="label_logo">Logo</string>

    <!-- HINTS -->

    <string name="text_field_password_hint">Password</string>
    <string name="text_field_user_hint">Email</string>
    <string name="text_field_name_hint">Name</string>
    <string name="text_field_model_hint">Car Model:</string>
    <string name="text_field_plate_hint">License Plate:</string>
    <string name="text_field_phone_number_hint">Enter your phone number</string>
    <string name="text_field_corporation">Flanelinha Co.</string>
    <string name="text_field_version">Version 1.0.0</string>
    <string name="text_field_make_registration">Not registered yet? SingUp here!</string>
    <string name="text_field_no_cars">No cars registered</string>
    <string name="text_field_listed_cars">Cars registered for you will be listed here</string>
    <string name="text_field_share_location">Share Location</string>


    <!-- OTHERS -->

    <string name="title_activity_main">MainActivity</string>
    <string name="title_about">About this app</string>
    <string name="title_register">Registration</string>
    <string name="title_update">Update</string>
    <string name="title_list">List</string>
    <string name="title_map">Map</string>
    <string name="title_contact">Contact</string>
    <string name="title_activity_maps">Map</string>
    <string name="message_no_phone">You need to enter the phone number</string>
    <string name="dev_name1">Raphael de Melo Silva</string>
    <string name="dev_name2">Adriano Mendes Marinheiro</string>
    <string name="dev_name3">Natalie Berland</string>
    <string name="label_attention">Warning</string>
    <string name="delete_dialog_title">Do you want to delete this parking?</string>
    <string name="developed_for_label">Developers:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="update_label">Update</string>
    <string name="register_label">Register</string>
    <string name="deleter_label">Delete</string>
    <string name="cancel_label">Cancel</string>

    <string name="message_success_register">Vehicle registered successfully!</string>
    <string name="message_success_update">Vehicle updated successfull!</string>
    <string name="message_success_delete">Vehicle deleted successfull!</string>

    <string name="label_loading">Loading...</string>

</resources>
