<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic-location-24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic-register-24"
        android:title="@string/title_register" />

    <item
        android:id="@+id/navigation_car_list"
        android:icon="@drawable/ic-cars-24"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic-contact-24"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic-about-24"
        android:title="@string/title_about" />

</menu>
